# Bratan

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
agents/blue-team/: AGENTS.md
agents/judge/: AGENTS.md
agents/red-team/: AGENTS.md
corpus/: README.md
docs/: RATIONALE.md  RESUME-HERE.md  architecture.md  custom-adapter.md  metrics.md  test-audit-2026-05-24.md  ui-coverage-audit-2026-05-24.md
docs/build-skills/: README.md
docs/plans/: 2026-05-24-followup-plan.md
pipeline/: CHANGELOG.md  agent_runner.py  budget.py  cache.py  config.yaml  embeddings.py  factories.py  ingest.py  judge.py  metrics.py  query.py  stop_criteria.py
pipeline/adapters/: base.py  chroma.py  pgvector.py  pinecone.py  qdrant.py  weaviate.py
pipeline/prompts/: generation.md
scripts/: eval.py  eval_single.py  ingest_worker.py  loop.py  query_worker.py  serve_ui.py  sweep.py
skills/ablation/: SKILL.md
skills/bayesian-optimization/: SKILL.md
skills/citation-verification/: SKILL.md
skills/contextual-chunk-enrichment/: SKILL.md
skills/failure-clustering/: SKILL.md
skills/grid-sweep/: SKILL.md
skills/hybrid-retrieval/: SKILL.md
skills/particle-swarm/: SKILL.md
skills/rag-architect/: SKILL.md
skills/synthetic-question-generation/: SKILL.md
test_cases/: schema.md
tests/: conftest.py  test_agent_runner.py  test_budget.py  test_cache.py  test_chroma_adapter.py  test_chroma_adapter_subprocess.py  test_config_store.py  test_contract_smoke.py  test_drift.py  test_ingest.py  test_ingest_worker.py  test_judge.py  test_loop_orchestrator.py  test_metrics_and_stop.py  test_pgvector_adapter.py  test_pinecone_adapter.py  test_qdrant_adapter.py  test_seed_workflow.py  test_weaviate_adapter.py
tests/_worker_stubs/: sitecustomize.py
tests/integration/: conftest.py  test_api_acceptance.py  test_corpus_files_after_ingest.py  test_dashboard_api.py  test_eval_end_to_end.py  test_ingest_query_pipeline.py  test_reset_vector_store_endpoint.py  test_vllm_control.py
ui/backend/: app.py  config_store.py  loop_control.py  schemas.py  seed_store.py  (+2 more)
(+133 files in other folders)
